--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 id="word"></h1>
         <p id="definition"></p>
-        <button id="nextButton">Show Another Word</button>
+        <button id="nextButton">Word.</button>
     </div>
     <script src="data.js"></script>
     <script src="script.js"></script>
