--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="toggle" id="toggleBtn">=</button>
+    <button class="toggle" id="toggleBtn">+</button>
     
     <div class="container" id="singleView">
         <h1 id="word"></h1>
